5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1712_2498.log
== TEST (2019-05-13 14:22:01) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
t = 1
while(na>=nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = t+1
print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:22:14) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
t = 1
while(na>=nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = t+1
print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:22:44) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
t = 1
while(na>=nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = t+1
	print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:22:45) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
t = 1
while(na>=nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = t+1
	print(ct)


-- EXECUTION TIME:
0.131672
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:

-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:22:47) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
t = 1
while(na>=nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = t+1
	print(ct)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(ct)
NameError: name 'ct' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:26:28) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:26:44) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- EXECUTION TIME:
0.314562
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:26:45) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:26:48) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- EXECUTION TIME:
0.321616
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:26:49) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:26:51) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- EXECUTION TIME:
0.219765
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:26:51) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:27:14) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:27:22) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- EXECUTION TIME:
0.272257
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:27:22) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:28:32) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(na < nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:28:34) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(na < nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:28:48) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:28:50) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:28:50) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- EXECUTION TIME:
0.659821
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
Numero de habitantes de A: Numero de habitantes de B: percentual de crescimento de A: percentual de crescimento de b: 6
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:29:11) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:29:14) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- EXECUTION TIME:
0.456743
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:32:03) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
t = 1
while(na<=nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = t+1
	print(ct)


-- EXECUTION TIME:
486.707
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:37:05) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(na < nb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
	print(ct)


-- EXECUTION TIME:
508.308
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:25:16) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:25:41) 
-- CODE:
na = int(input("Numero de habitantes de A: "))
nb = int(input("Numero de habitantes de B: "))
pa = float(input("percentual de crescimento de A: "))
pb = float(input("percentual de crescimento de b: "))

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1
while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) /100)
	ct = ct+1
print(ct)


-- EXECUTION TIME:
0.197646
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
